codegen/tests/ui/typed-uris-invalid-syntax.stderr
error: named and unnamed parameters cannot be mixed
  --> $DIR/typed-uris-invalid-syntax.rs:11:18
   |
11 |     uri!(simple: id = 100, "Hello");
   |                  ^^^^^^^^^^^^^^^^^

error: named and unnamed parameters cannot be mixed
  --> $DIR/typed-uris-invalid-syntax.rs:12:18
   |
12 |     uri!(simple: "Hello", id = 100);
   |                  ^^^^^^^^^^^^^^^^^

error: expected one of `::`, `:`, or `<eof>`, found `,`
  --> $DIR/typed-uris-invalid-syntax.rs:13:16
   |
13 |     uri!(simple,);
   |                ^ expected one of `::`, `:`, or `<eof>` here

error: expected argument list after `:`
  --> $DIR/typed-uris-invalid-syntax.rs:14:16
   |
14 |     uri!(simple:);
   |                ^

error: expected `,`, found `<eof>`
  --> $DIR/typed-uris-invalid-syntax.rs:15:10
   |
15 |     uri!("/mount");
   |          ^^^^^^^^

error: expected identifier, found `<eof>`
  --> $DIR/typed-uris-invalid-syntax.rs:16:18
   |
16 |     uri!("/mount",);
   |                  ^

error: invalid mount point
  --> $DIR/typed-uris-invalid-syntax.rs:17:10
   |
17 |     uri!("mount", simple);
   |          ^^^^^^^
   |
   = help: mount points must be static, absolute URIs: `/example`

error: invalid mount point
  --> $DIR/typed-uris-invalid-syntax.rs:18:10
   |
18 |     uri!("/mount/<id>", simple);
   |          ^^^^^^^^^^^^^
   |
   = help: mount points must be static, absolute URIs: `/example`

error: call to `uri!` cannot be empty
  --> $DIR/typed-uris-invalid-syntax.rs:19:5
   |
19 |     uri!();
   |     ^^^^^^^

error: expected expression, found `<eof>`
  --> $DIR/typed-uris-invalid-syntax.rs:20:21
   |
20 |     uri!(simple: id = );
   |                     ^

error: aborting due to 10 previous errors

