codegen/tests/ui/typed-uris-invalid-syntax.rs
#![feature(plugin, decl_macro, custom_derive)]
#![plugin(rocket_codegen)]
#![allow(dead_code, unused_variables)]

extern crate rocket;

#[post("/<id>/<name>")]
fn simple(id: i32, name: String) -> &'static str { "" }

fn main() {
    uri!(simple: id = 100, "Hello");
    uri!(simple: "Hello", id = 100);
    uri!(simple,);
    uri!(simple:);
    uri!("/mount");
    uri!("/mount",);
    uri!("mount", simple);
    uri!("/mount/<id>", simple);
    uri!();
    uri!(simple: id = );
}
